# nlsolvers-datagen

./: .gitmodules  CMakeLists.txt  README.md  aggregate_single_core.py  canonicalize_data.py  config_Klein-Gordon_2D_300x300_ns100_nt15000.yaml  config_Klein-Gordon_2D_300x300_ns50_nt6000.yaml  config_Klein-Gordon_3D_220x220x220_ns40_nt10000.yaml  config_Nonlinear_Schrodinger_2D_200x200_ns128_nt2000.yaml  dump_header.py  inspect_data.py  kge_2d_aggregate_hdf5.sh  kge_3d_aggregate_hdf5.sh  modules.txt  nlse_2d_aggregate_hdf.sh  parallel_generate_problem_configs.py
device/drivers/: CMakeLists.txt  kg_driver_dev_2d.cpp  kg_driver_dev_3d.cpp  kg_sv_driver_dev_2d.cpp  kg_sv_driver_dev_3d.cpp  nlse_cubic_driver_2d.cpp  nlse_cubic_driver_3d.cpp  nlse_cubic_sewi_driver_2d.cpp  nlse_cubic_sewi_driver_3d.cpp  sp4_sv_driver_dev_2d.cpp  sp4_sv_driver_dev_3d.cpp
device/include/: kg_dev.hpp
scripts/: aggregate_sanity_check.py  aggregate_single.py  another-aggregate.py  complex_launcher_2d.py  last-minute-analysis-kge-2d.py  last-minute-analysis-nlse-2d.py  test_aggregate_tmp_saver.py
